tests/suite/snapshots/suite__check__tests__check__bad_nested_array.xi.snap
---
source: tests/suite/check.rs
assertion_line: 35
expression: Snapshot(context)
---
Error: Semantic error
   ╭─[tests/check/bad_nested_array.xi:2:18]
   │
 2 │     i:bool[][] = {{}, {1}}
   ·     ─────┬────   ────┬────  
   ·          ╰────────────────── Expected bool[][] because of this
   ·                      │      
   ·                      ╰────── Expected bool[][] but found int[][]
───╯

